# gti

./: Cargo.toml  README.md
src/: app.rs  cli.rs  lib.rs  main.rs
src/completions/: gti.bash  gti.zsh
src/widgets/: art.rs  binoculars.rs  car.rs  force_hand.rs  mod.rs
