[package]
name = "gti"
version = "0.0.1"
edition = "2024"
description = "A tool for all people who misspell Git"
license = "GPL"
repository = "https://github.com/UlmerMan/gti"

[[bin]]
name = "gti"
path = "src/main.rs"

[dependencies]
clap = "4.6.1"
color-eyre = "0.6.5"
crossterm = "0.29.0"
rand = "0.10.2"
ratatui = "0.30.2"
